--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2010-02-10 20:29+0100\n"
+"POT-Creation-Date: 2010-02-20 09:26+0100\n"
 "PO-Revision-Date: 2009-10-15 20:52+0200\n"
 "Last-Translator: Ville Skyttä <ville.skytta@iki.fi>\n"
 "Language-Team:  <vdr@linuxtv.org>\n"
@@ -405,6 +405,37 @@ msgstr "Luo ajastimet uudelleen"
 
 msgid "Help$Set this to 'yes' if you want timers to be recreated with the next search timer update after deleting them."
 msgstr "Laittamalla tämän asetuksen päälle saat luotua ajastimet uudelleen seuraava hakuajastin päivityksen yhteydessä, jos olet poistanut ne."
+
+msgid "Check if EPG exists for ... [h]"
+msgstr ""
+
+#, fuzzy
+msgid "Help$Specify how many hours of future EPG there should be and get warned else after a search timer update."
+msgstr "Suorittaa päällekkäisyyksien tarkistuksen jokaisen hakuajastimen päivityksen yhteydessä."
+
+#, fuzzy
+msgid "Warn by OSD"
+msgstr "muistutus kuvaruutunäytölle"
+
+#, fuzzy
+msgid "Help$Set this to 'yes' if you want get warnings from the EPG check via OSD."
+msgstr "Tällä asetuksella saat ilmoitukset päällekkäisistä ajastimista sähköpostiisi."
+
+#, fuzzy
+msgid "Warn by mail"
+msgstr "muistutus sähköpostitse"
+
+#, fuzzy
+msgid "Help$Set this to 'yes' if you want get warnings from the EPG check by mail."
+msgstr "Asettaa SMTP-autentikoinnin päälle sähköpostin lähetystä varten."
+
+#, fuzzy
+msgid "Channel group to check"
+msgstr "Kanavaryhmä"
+
+#, fuzzy
+msgid "Help$Specify the channel group to check."
+msgstr "Määrittelee mallipohjan nimen."
 
 msgid "Ignore PayTV channels"
 msgstr "Jätä salatut kanavat huomioimatta"
@@ -1224,6 +1255,13 @@ msgstr "Löydettiin %d uutta lähetystä! Näytetäänkö?"
 
 msgid "Search timer update done!"
 msgstr "Hakuajastimet päivitetty!"
+
+#, c-format
+msgid "small EPG content on:%s"
+msgstr ""
+
+msgid "VDR EPG check warning"
+msgstr ""
 
 #, c-format
 msgid "Switch to (%d) '%s'?"
