--- a/po/fr_FR.po
+++ b/po/fr_FR.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2010-02-10 20:29+0100\n"
+"POT-Creation-Date: 2010-02-20 09:26+0100\n"
 "PO-Revision-Date: 2008-04-30 08:36+0200\n"
 "Last-Translator: Patrice Staudt <patrice.staudt@laposte.net>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -405,6 +405,37 @@ msgstr "Recrer la programmation après l'éffacement"
 
 msgid "Help$Set this to 'yes' if you want timers to be recreated with the next search timer update after deleting them."
 msgstr "Choisissez 'oui' pour refaire les programmations de recherche lorsque vous les avez effacés."
+
+msgid "Check if EPG exists for ... [h]"
+msgstr ""
+
+#, fuzzy
+msgid "Help$Specify how many hours of future EPG there should be and get warned else after a search timer update."
+msgstr "Avec 'Oui' vous impliquez la vérification de conflits à la mise à jours de la recherche."
+
+#, fuzzy
+msgid "Warn by OSD"
+msgstr "Annoncer seulement début d'une programme"
+
+#, fuzzy
+msgid "Help$Set this to 'yes' if you want get warnings from the EPG check via OSD."
+msgstr "Mettez 'oui',si les conflits de programmation doivent être notifiés."
+
+#, fuzzy
+msgid "Warn by mail"
+msgstr "Annoncer seulement début d'une programme"
+
+#, fuzzy
+msgid "Help$Set this to 'yes' if you want get warnings from the EPG check by mail."
+msgstr "Mettez 'oui',si le compte mail utilise l'authentification pour les mails sortants."
+
+#, fuzzy
+msgid "Channel group to check"
+msgstr "Groupe de chaînes"
+
+#, fuzzy
+msgid "Help$Specify the channel group to check."
+msgstr "Spécifier le nom du modèle."
 
 msgid "Ignore PayTV channels"
 msgstr "Ignorer les chaînes payantes"
@@ -1214,6 +1245,13 @@ msgstr "Afficher les %d nouvelles émissions trouvées?"
 
 msgid "Search timer update done!"
 msgstr "La mise à jours de recherche est effectuée!"
+
+#, c-format
+msgid "small EPG content on:%s"
+msgstr ""
+
+msgid "VDR EPG check warning"
+msgstr ""
 
 #, c-format
 msgid "Switch to (%d) '%s'?"
