--- a/po/lt_LT.po
+++ b/po/lt_LT.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.7.10\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2010-02-10 20:29+0100\n"
+"POT-Creation-Date: 2010-02-20 09:26+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Valdemaras Pipiras <varas@ambernet.lt>\n"
 "Language-Team: Lietuvių\n"
@@ -403,6 +403,37 @@ msgstr "Atkurti laikmačius po ištrynimo"
 
 msgid "Help$Set this to 'yes' if you want timers to be recreated with the next search timer update after deleting them."
 msgstr "Nustatykite 'taip' jei norite kad laikmačiai galėtų būti atkurti po ištrynimo dar kartą panaudojus laikmačio paiešką."
+
+msgid "Check if EPG exists for ... [h]"
+msgstr ""
+
+#, fuzzy
+msgid "Help$Specify how many hours of future EPG there should be and get warned else after a search timer update."
+msgstr "Nustatyti 'taip' jei konflikto paieška turėtų būti vykdoma po kiekvieno paieškos laikmačio atnaujinimo."
+
+#, fuzzy
+msgid "Warn by OSD"
+msgstr "Perspėti per ekrano užsklandą"
+
+#, fuzzy
+msgid "Help$Set this to 'yes' if you want get warnings from the EPG check via OSD."
+msgstr "Nustatyti 'taip' jei norite gauti pranešimus el. paštu apie laikmačio konfliktus."
+
+#, fuzzy
+msgid "Warn by mail"
+msgstr "Perspėti per emailą"
+
+#, fuzzy
+msgid "Help$Set this to 'yes' if you want get warnings from the EPG check by mail."
+msgstr "Nustatyti 'taip' jei el.pašto siuntimui reikia autentifikacijos."
+
+#, fuzzy
+msgid "Channel group to check"
+msgstr "Kanalo grupė"
+
+#, fuzzy
+msgid "Help$Specify the channel group to check."
+msgstr "Nurodyti šablono pavadinimą."
 
 msgid "Ignore PayTV channels"
 msgstr "Ignoruoti Mokamus kanalus"
@@ -1221,6 +1252,13 @@ msgstr "Rasta %d naujas(ų) transliuotojas(ų)! Parodyti juos?"
 
 msgid "Search timer update done!"
 msgstr "Laikmačio atnaujinimo paieška baigta sėkmingai!"
+
+#, c-format
+msgid "small EPG content on:%s"
+msgstr ""
+
+msgid "VDR EPG check warning"
+msgstr ""
 
 #, c-format
 msgid "Switch to (%d) '%s'?"
