update to new SVDRP default port 6419

--- a/HISTORY
+++ b/HISTORY
@@ -3,7 +3,9 @@ VDR Plugin 'epgsearch' Revision History
 
 2010-xx-xx; Version 0.9.25
 new:
-- support for vdr-1.7.12
+- vdr-1.7.15 has changed the SVDRP default port to 6419, please update this in epgsearch's 
+  setup menu too!
+- support for vdr-1.7.12 and later
 - there is now an official git repository for epgsearch, that contains the latest 
   development. 
   First usage: 
