--- a/po/cs_CZ.po
+++ b/po/cs_CZ.po
@@ -10,7 +10,8 @@ msgstr ""
 "POT-Creation-Date: 2010-12-28 20:19+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Vladimír Bárta <vladimir.barta@k2atmitec.cz>\n"
-"Language-Team: <vdr@linuxtv.org>\n"
+"Language-Team: Czech <vdr@linuxtv.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
