--- a/po/el_GR.po
+++ b/po/el_GR.po
@@ -10,7 +10,8 @@ msgstr ""
 "POT-Creation-Date: 2010-12-28 20:19+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Dimitrios Dimitrakos <mail@dimitrios.de>\n"
-"Language-Team: <vdr@linuxtv.org>\n"
+"Language-Team: Greek <vdr@linuxtv.org>\n"
+"Language: el\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-7\n"
 "Content-Transfer-Encoding: 8bit\n"
