--- a/po/et_EE.po
+++ b/po/et_EE.po
@@ -10,7 +10,8 @@ msgstr ""
 "POT-Creation-Date: 2010-12-28 20:19+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Arthur Konovalov <kasjas@hot.ee>\n"
-"Language-Team: <vdr@linuxtv.org>\n"
+"Language-Team: Estonian <vdr@linuxtv.org>\n"
+"Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-13\n"
 "Content-Transfer-Encoding: 8bit\n"
