--- a/po/fr_FR.po
+++ b/po/fr_FR.po
@@ -13,7 +13,8 @@ msgstr ""
 "POT-Creation-Date: 2010-12-28 20:19+0100\n"
 "PO-Revision-Date: 2008-04-30 08:36+0200\n"
 "Last-Translator: Patrice Staudt <patrice.staudt@laposte.net>\n"
-"Language-Team: <vdr@linuxtv.org>\n"
+"Language-Team: French <vdr@linuxtv.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
