--- a/po/lt_LT.po
+++ b/po/lt_LT.po
@@ -10,7 +10,8 @@ msgstr ""
 "POT-Creation-Date: 2010-12-28 20:19+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Valdemaras Pipiras <varas@ambernet.lt>\n"
-"Language-Team: Lietuvių\n"
+"Language-Team: Lithuanian <vdr@linuxtv.org>\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
