--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -12,7 +12,8 @@ msgstr ""
 "POT-Creation-Date: 2010-12-28 20:19+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Maarten Wisse <Maarten.Wisse@urz.uni-hd.de>\n"
-"Language-Team: <vdr@linuxtv.org>\n"
+"Language-Team: Dutch <vdr@linuxtv.org>\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
