--- a/po/ro_RO.po
+++ b/po/ro_RO.po
@@ -11,7 +11,8 @@ msgstr ""
 "POT-Creation-Date: 2010-12-28 20:19+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Lucian Muresan <lucianm@users.sourceforge.net>\n"
-"Language-Team: <vdr@linuxtv.org>\n"
+"Language-Team: Romanian <vdr@linuxtv.org>\n"
+"Language: ro\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
