--- a/po/sl_SI.po
+++ b/po/sl_SI.po
@@ -11,7 +11,8 @@ msgstr ""
 "POT-Creation-Date: 2010-12-28 20:19+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Matjaz Thaler <matjaz.thaler@guest.arnes.si>\n"
-"Language-Team: <vdr@linuxtv.org>\n"
+"Language-Team: Slovenian <vdr@linuxtv.org>\n"
+"Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
