dropped option 'yes' in 'compare subtitle' when checking for a repeat and replaced it with 'if present'

--- a/HISTORY
+++ b/HISTORY
@@ -64,11 +64,9 @@ new:
   miss one only because of a buggy EPG.
 - searchtimers: if a timers filename results in an empty string or contains 
   "!^invalid^!" it will be skipped for programming now.
-- Avoid repeats: 'Compare subtitle' has now a third value 'if present' besides 'no'
-  and 'yes'. With this setting epgsearch will classify two events only as equal if 
-  their episode names match and are not empty. Caution: if your EPG data has no episode 
-  names for different episodes don't use this option! 'yes' will then be the better
-  choice even if this results in double recordings.
+- Avoid repeats: The option 'Yes' for 'Compare subtitle' is now replaced with 'if present'.
+  With this setting epgsearch will classify two events only as equal if 
+  their episode names match and are not empty. 
 - epgsearch now uses the shutdown handler (introduced in vdr 1.5.1) to prevent a 
   search timer update to be interrupted.
 - the SVDRP command UPDS for triggering search timer updates has now a new option 
