--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-01-08 12:15+0100\n"
+"POT-Creation-Date: 2011-05-30 19:07+0200\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: German <vdr@linuxtv.org>\n"
@@ -748,6 +748,9 @@ msgstr "Verw. Wochentag"
 msgid "Day of week"
 msgstr "Wochentag"
 
+msgid "Use global"
+msgstr "Global verwenden"
+
 msgid "Button$Templates"
 msgstr "Vorlagen"
 
@@ -990,6 +993,9 @@ msgstr "Ankündigen und Umschalten"
 
 msgid "Announce by mail"
 msgstr "per Mail ankündigen"
+
+msgid "only globals"
+msgstr "nur globale"
 
 msgid "Selection"
 msgstr "Auswahl"
